# yast-openvas-security-scanner

./: MAINTAINER  README.md  RPMNAME  yast2-openvas-security-scanner.spec.in
agents/: Makefile.am  openvas-security-scanner.scr
doc/: Makefile.am
doc/autodocs/: Makefile.am
package/: yast2-openvas-security-scanner.changes  yast2-openvas-security-scanner.spec
src/: Makefile.am  OpenvasSecurityScanner.ycp  complex.ycp  dialogs.ycp  helps.ycp  openvas-feed-sync.cron.daily  openvas-security-scanner.desktop  openvas-security-scanner.ycp  wizards.ycp
src/clients/: openvas-security-scanner.rb
src/include/openvas-security-scanner/: complex.rb  complex.ycp  dialogs.rb  helps.rb  wizards.rb  wizards.ycp
src/modules/: OpenvasSecurityScanner.rb
src/scrconf/: openvas-security-scanner.scr
